--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -14,7 +14,7 @@
     padding: 1rem;
 }
 
-.home-page .search-bar #searchInput {
+.home-page .search-bar .searchInput {
     padding: 15px 115px 15px 35px;
     border-radius: 1.125rem;
     border: 1px solid #ccc;
